update avatar spacing and fix hooks bug that caused infinite re-renders

--- a/src/components/appbar/appbar.component.scss
+++ b/src/components/appbar/appbar.component.scss
@@ -6,18 +6,19 @@
 }
 
 .main_appbar__logo_container__image {
-    width: 2rem;
-    height: 2.4rem;
+    width: 1.6rem;
+    height: 1.8rem;
 
     margin-right: 1rem;
 }
 
 .main_appbar__logo_container__logo {
     // color: $WHITE_COLOR;
+    font-family: 'Oswald';
 }
 
 .main_appbar__right_container__text {
-    margin-left: 1rem;
+    // margin-left: 1rem;
 }
 
 .main_appbar__right_container__image {
@@ -25,7 +26,7 @@
     width: 2rem;
     border-radius: 50%;
 
-    margin-right: 1rem;
+    margin-right: .8rem;
 }
 
 .main_appbar__button {
